CHANGELOG RoundCube Webmail
---------------------------

2008/10/07 (alec)
----------
- Write username instead of id in sendmail log (#1485477)
- Fix htmlspecialchars() use for PHP version < 5.2.3 (#1485475)
- Fix js keywords escaping in json_serialize() for IE/Opera (#1485472)

2008/10/03 (alec)
----------
- Add support for SJIS, GB2312, BIG5 in rc_detect_encoding()
- Fix vCard file encoding detection for non-UTF-8 strings (#1485410)
- Add 'skip_deleted' option in User Preferences (#1485445)

2008/10/02 (alec)
----------
- Minimize "inline" javascript scripts use (#1485433)
- Fix css class setting for folders with names matching defined classes names (#1485355)
- Fix race conditions when changing mailbox

2008/10/01 (alec)
- Fix spellchecking when switching to html editor (#1485362)
- Fix compose window width/height (#1485396)
- Allow calling msgimport.sh/msgexport.sh from any directory (#1485431)
- Localized filesize units (#1485340)
- Better handling of "no identity" and "no email in identity" situations (#1485117)

2008/09/29 (alec)
----------
- Added 'mime_param_folding' option with possibility to choose 
  long/non-ascii attachment names encoding eg. to be readable
  in MS Outlook/OE (#1485320)
- Added "advanced options" feature in User Preferences
- Fix unread counter when displaying cached massage in preview panel (#1485290)
- Fix htmleditor spellchecking on MS Windows (#1485397)

2008/09/25 (alec)
----------
- Fix problem with non-ascii attachment names in Mail_mime (#1485267, #1485096)

2008/09/23 (alec)
----------
- Fix language autodetection (#1485401)
- Fix button label in folders management (#1485405)
- Fix collapsed folder not indicating unread msgs count of all subfolders (#1485403)
- Fix handling of apostrophes in filenames decoded according to rfc2231

2008/09/19 (thomasb)
----------
- Made config files location configurable (#1485215)

2008/09/16 (alec)
----------
- Reduced memory footprint when forwarding attachments (#1485345)